# cartoblobpy

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
docs/source/: conf.py  index.rst  modules.rst
notebooks/: .gitignore  demo.ipynb  demo_00.ipynb  map_generation.ipynb  mapgen.ipynb
notebooks/basic_demo/: basic_demo.ipynb
notebooks/create_map_demo/: demo.ipynb  map.yaml
notebooks/depth/: demo.ipynb  map.yaml
notebooks/layers_demo/: demo.ipynb  map.yaml
src/cartoblobpy/: graph.py  map_generation.py  utils.py
src/cartoblobpy/assets/: __assets.py  __init__.py  map002.yaml  map004.yaml  map005.yaml  map006.yaml  map007.yaml  map008.yaml  map009.yaml  map010.yaml  map011.yaml  map012.yaml  map013.yaml  map014.yaml  map015.yaml  map016.yaml  troendelag.yaml
tests/: test_assets.py  test_graph.py  test_map_generation.py  test_utils.py
