[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cartoblobpy"
authors = [
  { name="Emir Cem Gezer", email="me@emircem.com"}
]
description = "A nonlinear model predictive control framework for safe velocity controller"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENCE" }
dynamic = ["version", "dependencies"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Operating System :: OS Independent"
]

keywords = ["simulation", "dynamics", "map"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.package-data]

[tool.setuptools_scm]
# Basic setuptools-scm config: derive version from git tags.
# No write_to/version_file needed; importlib.metadata reads dist metadata.
version_scheme = 'post-release'
